[tool.poetry]
name = "pynetdicom2"
version = "0.9.2"
description = "pynetdicom2 is a pure python package implementing the DICOM network protocol"
authors = ["Pavel 'Blane' Tuchin <blane.public@gmail.com>"]

license = "MIT"

readme = "README.rst"

keywords = ["medical", "dicom", "network"]

repository = "https://github.com/blanebf/pynetdicom2"
homepage = "https://github.com/blanebf/pynetdicom2"
documentation = "https://pynetdicom2.readthedocs.io/en/latest/"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
six = "*"
pydicom = "^1, ^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
